2004-11-05  Bryce McKinlay  <mckinlay@redhat.com>

	* link.cc: Include VerifyError.h. 
	(_Jv_Linker::verify_type_assertions): New. Read and evaluate entries
	in the type assertion table.
	* include/execution.h (_Jv_CompiledEngine::do_verify): Use
	verify_type_assertions.
	* include/jvm.h (_Jv_Linker::verify_type_assertions): declare.
	* java/lang/Class.h (JV_ASSERT_END_OF_TABLE, 
	JV_ASSERT_TYPES_COMPATIBLE, JV_ASSERT_IS_INSTANTIABLE): Declare
	assertion code values.
	(struct _Jv_TypeAssertion): Declare.
	(assertion_table): New class field.
	(verify): Remove class field.

2004-11-05  Andrew Haley  <aph@redhat.com>

	* Makefile.am: Move jv_dbtool.java to
	gnu/gcj/tools/gcj_dbtool/Main.java.
	* Makefile.in: Rebuild.
	* java/lang/VMCompiler.java: Rename property
	"gnu.gcj.precompiled.db" to "gnu.gcj.precompiled.db.path".
	* gnu/gcj/tools/gcj_dbtool/Main.java: moved here from
	jv_dbtool.java.
	
2004-11-05  Andrew Haley  <aph@redhat.com>

	* jv_dbtool.java (main): Allow the user to specify the size of the
	database.  Display the capacity and the size.
	(usage): Show the new option.
		
2004-11-04  Tom Tromey  <tromey@redhat.com>

	* include/jvm.h (_Jv_Linker::set_vtable_entries): Updated.
	* link.cc (make_vtable): Use correct index when searching for
	missing method's name.  Don't use `flags'.
	(set_vtable_entries): Removed `flags' argument.  Don't recurse
	into superclasses.
	(link_symbol_table): Ensure target class method table is
	complete.  Ensure target fields are laid out before entering
	loop.

	* java/lang/natClass.cc (_Jv_getInterfaceMethod): Indentation
	fix.

	* interpret.cc (do_verify): Don't verify abstract methods.

2004-11-01  Tom Tromey  <tromey@redhat.com>

	* link.cc (wait_for_state): Call verify_class.

	* verify.cc (state::check_no_uninitialized_objects): Removed.
	(push_jump): Updated.
	(push_exception_jump): Likewise.
	(handle_ret_insn): Likewise.
	(handle_jsr_insn): Likewise.

2004-10-28  Andrew Haley  <aph@redhat.com>
