@@ -1632,6 +1632,17 @@ _Jv_Linker::verify_type_assertions (jclass klass)
 	  if (cl1 == NULL || cl2 == NULL)
 	    continue;
 
+	  // Strip off array types before trying to link supers.  This
+	  // is somewhat ugly, since it duplicates some logic from
+	  // _Jv_IsAssignableFromSlow.
+	  while (cl1->isArray () && cl2->isArray ())
+	    {
+	      cl1 = cl1->getComponentType ();
+	      cl2 = cl2->getComponentType ();
+	    }
+	  wait_for_state (cl1, JV_STATE_LOADING);
+	  wait_for_state (cl2, JV_STATE_LOADING);
+
           if (! _Jv_IsAssignableFromSlow (cl2, cl1))
 	    {
 	      jstring s = JvNewStringUTF ("Incompatible types: In class ");
